WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172476
ASSERTION FAILED: !renderer().view().needsLayout() while running media/video-main-content-autoplay.html
https://bugs.webkit.org/show_bug.cgi?id=172476
Summary
ASSERTION FAILED: !renderer().view().needsLayout() while running media/video-...
alan
Reported
2017-05-22 15:53:24 PDT
rdar://problem/32176100
Attachments
Patch
(1.76 KB, patch)
2017-05-22 16:04 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews117 for mac-elcapitan
(2.56 MB, application/zip)
2017-05-22 17:35 PDT
,
Build Bot
no flags
Details
Patch
(2.21 KB, patch)
2017-05-22 19:34 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2017-05-22 16:04:49 PDT
Created
attachment 310946
[details]
Patch
Build Bot
Comment 2
2017-05-22 17:35:07 PDT
Comment on
attachment 310946
[details]
Patch
Attachment 310946
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/3796924
New failing tests: fast/repaint/fixed-right-bottom-in-page-scale.html fullscreen/full-screen-restrictions.html
Build Bot
Comment 3
2017-05-22 17:35:09 PDT
Created
attachment 310962
[details]
Archive of layout-test-results from ews117 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-elcapitan Platform: Mac OS X 10.11.6
alan
Comment 4
2017-05-22 18:45:10 PDT
These 2 failures are actual bugs ^^. See
bug 172484
.
alan
Comment 5
2017-05-22 19:34:59 PDT
Created
attachment 310971
[details]
Patch
WebKit Commit Bot
Comment 6
2017-05-23 11:37:11 PDT
Comment on
attachment 310971
[details]
Patch Clearing flags on attachment: 310971 Committed
r217286
: <
http://trac.webkit.org/changeset/217286
>
WebKit Commit Bot
Comment 7
2017-05-23 11:37:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug